--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,7 +1,17 @@
 <h1>{{ question.question_text }}</h1>
-<ul>
+{#<ul>#}
+{#    {% for choice in question.choice_set.all %}#}
+{#    <li>{{ choice.choice_text }}</li>#}
+{#    {%  endfor %}#}
+{#</ul>#}
+{#<a href ="{% url 'polls:index' %}">powrót</a>#}
+
+{% if error_message %} <p><strong>{{ error_message }}</strong></p> {% endif %}
+
+<form action="{% url 'polls:vote' question.id %}" method="POST">
+{% csrf_token %}
     {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }}</li>
-    {%  endfor %}
-</ul>
-<a href ="{% url 'polls:index' %}">powrót</a>
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+    {% endfor %}
+<input type="submit" value="vote">
+</form>
