--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -12,6 +12,7 @@
 {% csrf_token %}
     {% for choice in question.choice_set.all %}
     <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
     {% endfor %}
 <input type="submit" value="vote">
 </form>
