--- a/src/resources/templates/layout/header.html
+++ b/src/resources/templates/layout/header.html
@@ -14,9 +14,12 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a href="#" class="navbar-brand" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a  th:href="@{/products}">Products</a></li>
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a th:href="@{/products}">Products</a></li>
                         <li><a th:href="@{/products/add}">Create Product</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a th:href="@{/user}">User</a></li>
                     </ul>
                 </div>
             </div>
