--- a/src/resources/templates/layout/header.html
+++ b/src/resources/templates/layout/header.html
@@ -19,7 +19,7 @@
                         <li><a th:href="@{/products/add}">Create Product</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a th:href="@{/user}">User</a></li>
+                        <li><a th:href="@{/users}">Users</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <img id="shop-img" src="/../resources/static/img/shop.jpg" th:src="@{../resources/static/img/shop.jpg}" />
+                <img src="https://www.oushop.com/warp_sites/oushop.g6/files/Shop2.jpg" th:width="500px" th:height="250px" />
             </div>
         </div>
     </div>
