changed to bootstrap

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,16 @@
 <app-nav-bar></app-nav-bar>
-E-shop starter
-<br>
 
-<button mat-raised-button="mat-primary">test</button>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Welcome</h1>
+    <h2>E-shop demo</h2>
+  </div>
+
+  <div class="panel panel-primary">
+    <div class="panel-heading">Status</div>
+    <div class="panel-body">
+      <h3>{{title}}</h3>
+    </div>
+  </div>
+</div>
