--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,11 +1,14 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Simple E-shop</span>
-
-    <span class="example-spacer"></span>
-
-    <button mat-button>About</button>
-    <button mat-button>Services</button>
-    <button mat-button>Contact</button>
-  </mat-toolbar-row>
-</mat-toolbar>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand" href="#">Home</a>
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Create Product</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Users</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
