--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,20 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand" href="#">Home</a>
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Create Product</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Users</a></li>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Product</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">New Product</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-0">
+      <li class="nav-item">
+        <a class="nav-link" href="#">User</a>
+      </li>
+    </ul>
   </div>
 </nav>
