--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,20 +1,21 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item navbar-brand">
+        <h2>Admin Portal <span class="sr-only">(current)</span></h2>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Product</a>
+      <li class="nav-item" [hidden]="!loggedIn">
+        <a class="nav-link" href="#">Products</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [hidden]="!loggedIn">
         <a class="nav-link" href="#">New Product</a>
       </li>
     </ul>
     <ul class="navbar-nav mr-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">User</a>
+        <a class="nav-link" href="#">Login</a>
       </li>
     </ul>
   </div>
 </nav>
+<button class="btn btn-danger"(click)="toggle()">toggle</button>
