--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -6,11 +6,5 @@
     <h1>Welcome</h1>
     <h2>E-shop demo</h2>
   </div>
-
-  <div class="panel panel-primary">
-    <div class="panel-heading">Status</div>
-    <div class="panel-body">
-      <h3>{{title}}</h3>
-    </div>
-  </div>
 </div>
+<app-login></app-login>
