--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,10 +1,3 @@
 <app-nav-bar></app-nav-bar>
 
-
-<div class="container">
-  <div class="jumbotron">
-    <h1>Welcome</h1>
-    <h2>E-shop demo</h2>
-  </div>
-</div>
-<app-login></app-login>
+<router-outlet></router-outlet>
